// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooResetPasswordComponent Rendering should render with border class 1`] = `
<yoo-reset-password
  border-class="success"
  class="hydrated"
  data-yoo-reset-password-host=""
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            border-color="success"
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="undefined large"
        data-yoo-reset-password=""
      />
    </div>
  </div>
</yoo-reset-password>
`;

exports[`YooResetPasswordComponent Rendering should render with button class 1`] = `
<yoo-reset-password
  button-class="success"
  class="hydrated"
  data-yoo-reset-password-host=""
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="success large"
        data-yoo-reset-password=""
      />
    </div>
  </div>
</yoo-reset-password>
`;

exports[`YooResetPasswordComponent Rendering should render with button text 1`] = `
<yoo-reset-password
  button-text="submit"
  class="hydrated"
  data-yoo-reset-password-host=""
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="undefined large"
        data-yoo-reset-password=""
        text="submit"
      />
    </div>
  </div>
</yoo-reset-password>
`;

exports[`YooResetPasswordComponent Rendering should render with heading 1`] = `
<yoo-reset-password
  class="hydrated"
  data-yoo-reset-password-host=""
  heading="title"
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      title
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="undefined large"
        data-yoo-reset-password=""
      />
    </div>
  </div>
</yoo-reset-password>
`;

exports[`YooResetPasswordComponent Rendering should render with input label 1`] = `
<yoo-reset-password
  class="hydrated"
  data-yoo-reset-password-host=""
  input-label="email"
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
        label="email"
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="undefined large"
        data-yoo-reset-password=""
      />
    </div>
  </div>
</yoo-reset-password>
`;

exports[`YooResetPasswordComponent Rendering should render with subheading 1`] = `
<yoo-reset-password
  class="hydrated"
  data-yoo-reset-password-host=""
  subheading="subtitle"
>
  
  <div
    attr-layout="column"
    attr-layout-align="space-between"
    class="container"
    data-yoo-reset-password=""
  >
    <div
      class="title"
      data-yoo-reset-password=""
    >
      
    </div>
    <div
      class="subtitle"
      data-yoo-reset-password=""
    >
      subtitle
    </div>
    <div
      class="input"
      data-yoo-reset-password=""
    >
      <yoo-form-input-container
        data-yoo-reset-password=""
      >
        <div
          data-yoo-reset-password=""
        >
          <yoo-form-input
            class="simple"
            data-yoo-reset-password=""
          />
        </div>
      </yoo-form-input-container>
    </div>
    <div
      class="button"
      data-yoo-reset-password=""
    >
      <yoo-button
        class="undefined large"
        data-yoo-reset-password=""
      />
    </div>
  </div>
</yoo-reset-password>
`;
